<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
<!--    <TextView-->
<!--        android:id="@+id/question_text_view"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="24dp"-->
<!--        android:gravity="center"-->
<!--        />-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp" android:orientation="vertical">

            <TextView
                    android:id="@+id/team_A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/team_A"
            />
            <TextView
                    android:id="@+id/score_A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="30sp"
            />
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:text="FOUL: "
                />
                <TextView
                        android:id="@+id/foul_A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="18sp"
                />
            </LinearLayout>

            <Button
                    android:id="@+id/three_point_button_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three_points"/>

            <Button
                    android:id="@+id/two_point_button_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two_points"/>

            <Button
                    android:id="@+id/free_throw_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/free_throw"/>

            <Button
                    android:id="@+id/foul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foul"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="3dp">
        </LinearLayout>
        <View
            android:layout_width="2dp"
            android:layout_height="400dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp">
            <RelativeLayout
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">

            </RelativeLayout>
            <TextView
                android:id="@+id/team_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/team_B"
                />
            <TextView
                android:id="@+id/score_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp"
                />
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:text="FOUL: "
                />
                <TextView
                        android:id="@+id/foul_B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="18sp"
                />
            </LinearLayout>

            <Button
                android:id="@+id/three_point_button_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_points" />

            <Button
                android:id="@+id/two_point_button_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_points" />

            <Button
                android:id="@+id/free_throw_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_throw" />

            <Button
                    android:id="@+id/foul_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foul" />
        </LinearLayout>

    </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/reset" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/save" />

</LinearLayout>



</LinearLayout>